--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-navigation": "^4.0.10",
     "react-navigation-drawer": "^2.2.2",
     "react-navigation-tabs": "^2.5.6",
+    "react-redux": "^7.1.1",
     "realm": "latest",
     "uuid": "^3.3.3"
   },
