--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-navigation-tabs": "^2.5.6",
     "react-redux": "^7.1.1",
     "realm": "latest",
+    "redux": "^4.0.4",
     "uuid": "^3.3.3"
   },
   "devDependencies": {
