--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-redux": "^7.1.1",
     "realm": "latest",
     "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
     "uuid": "^3.3.3"
   },
   "devDependencies": {
