--- a/package.json
+++ b/package.json
@@ -37,10 +37,10 @@
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "^0.11.7",
     "react-navigation": "^4.0.10",
-    "react-navigation-drawer": "^2.2.2",
+    "react-navigation-drawer": "^2.3.2",
     "react-navigation-tabs": "^2.5.6",
     "react-redux": "^7.1.1",
-    "realm": "latest",
+    "realm": "3.4.1",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "uuid": "^3.3.3"
