--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.5.1",
+    "@react-native-community/async-storage": "^1.6.3",
     "appcenter": "2.4.0",
     "appcenter-analytics": "2.4.0",
     "appcenter-crashes": "2.4.0",
@@ -42,6 +43,7 @@
     "react-redux": "^7.1.1",
     "realm": "3.4.1",
     "redux": "^4.0.4",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "uuid": "^3.3.3"
   },
