--- a/ios/Podfile
+++ b/ios/Podfile
@@ -27,8 +27,11 @@ target 'Robotics' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
   pod 'RNGestureHandler', :podspec => '../node_modules/react-native-gesture-handler/RNGestureHandler.podspec'
-  pod 'react-native-ble-plx-swift', :path => '../node_modules/react-native-ble-plx'
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+
+
+  pod 'react-native-ble-plx', :path => '../node_modules/react-native-ble-plx'
+  pod 'react-native-ble-plx-swift', :path => '../node_modules/react-native-ble-plx'
 
   target 'RoboticsTests' do
     inherit! :search_paths
