--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   "dependencies": {
     "@material-ui/core": "^4.7.0",
     "@react-native-community/async-storage": "^1.6.3",
-    "appcenter": "2.4.0",
+    "appcenter": "^2.6.1",
     "appcenter-analytics": "2.4.0",
-    "appcenter-crashes": "2.4.0",
+    "appcenter-crashes": "^2.6.1",
     "buffer": "^5.4.3",
     "i18n-js": "^3.5.0",
     "jetifier": "^1.6.4",
