--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "explore-it Robotics",
-  "displayName": "explore-it Robotics"
+  "name": "explore-it",
+  "displayName": "explore-it"
 }
