--- a/package.json
+++ b/package.json
@@ -10,52 +10,52 @@
     "postinstall": "npx jetify"
   },
   "dependencies": {
-    "@material-ui/core": "^4.7.0",
-    "@react-native-community/async-storage": "^1.6.3",
+    "@material-ui/core": "^4.9.11",
+    "@react-native-community/async-storage": "^1.9.0",
     "appcenter": "^2.6.1",
     "appcenter-analytics": "2.4.0",
     "appcenter-crashes": "^2.6.1",
-    "buffer": "^5.4.3",
+    "buffer": "^5.6.0",
     "i18n-js": "^3.5.0",
     "jetifier": "^1.6.4",
     "native-base": "^2.13.8",
     "prop-types": "^15.7.2",
-    "react": "16.8.6",
-    "react-art": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-native": "0.60.5",
+    "react": "16.11.0",
+    "react-art": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-native": "^0.62.2",
     "react-native-ble-plx": "^1.1.0",
     "react-native-elements": "^1.2.7",
-    "react-native-fab": "^1.0.9",
-    "react-native-gesture-handler": "^1.5.1",
+    "react-native-fab": "^1.0.14",
+    "react-native-gesture-handler": "^1.6.1",
     "react-native-iphone-x-helper": "^1.2.1",
-    "react-native-localize": "^1.3.1",
-    "react-native-paper": "^3.3.0",
-    "react-native-reanimated": "^1.4.0",
+    "react-native-localize": "^1.4.0",
+    "react-native-paper": "^3.8.0",
+    "react-native-reanimated": "^1.8.0",
     "react-native-svg": "^9.13.3",
-    "react-native-tab-view": "^2.11.0",
+    "react-native-tab-view": "^2.14.0",
     "react-native-typography": "^1.4.1",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "^0.11.7",
-    "react-navigation": "^4.0.10",
-    "react-navigation-drawer": "^2.3.2",
-    "react-navigation-tabs": "^2.6.0",
+    "react-navigation": "^4.3.7",
+    "react-navigation-drawer": "^2.4.11",
+    "react-navigation-tabs": "^2.8.11",
     "react-redux": "^7.1.1",
     "realm": "3.6.0",
     "redux": "^4.0.4",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
-    "uuid": "^3.3.3"
+    "uuid": "^3.4.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.7.4",
-    "@babel/runtime": "^7.7.4",
+    "@babel/core": "^7.6.2",
+    "@babel/runtime": "^7.6.2",
     "@react-native-community/eslint-config": "^0.0.5",
     "babel-jest": "^24.9.0",
-    "eslint": "^6.7.1",
+    "eslint": "^6.5.1",
     "jest": "^24.9.0",
     "metro-react-native-babel-preset": "^0.56.3",
-    "react-test-renderer": "16.8.6"
+    "react-test-renderer": "16.11.0"
   },
   "jest": {
     "preset": "react-native"
