--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-localize": "^1.4.0",
     "react-native-paper": "^3.8.0",
     "react-native-reanimated": "^1.8.0",
+    "react-native-screens": "^2.5.0",
     "react-native-svg": "^9.13.3",
     "react-native-tab-view": "^2.14.0",
     "react-native-typography": "^1.4.1",
