--- a/ios/Podfile
+++ b/ios/Podfile
@@ -81,7 +81,7 @@ target 'Robotics' do
   pod 'react-native-ble-plx-swift', :path => '../node_modules/react-native-ble-plx'
 
   target 'RoboticsTests' do
-    inherit! :search_paths
+    inherit! :complete
     # Pods for testing
   end
 
@@ -105,6 +105,7 @@ target 'Robotics-tvOS' do
   end
 
 end
+
 # Post Install processing for Flipper
 def flipper_post_install(installer)
   installer.pods_project.targets.each do |target|
@@ -113,12 +114,19 @@ def flipper_post_install(installer)
         config.build_settings['SWIFT_VERSION'] = '4.1'
       end
     end
-
-    # Enable Flipper for simulators only
-    if target.name.start_with?('Flipper')
-      target.build_configurations.each do |config|
-        config.build_settings['VALID_ARCHS'] = 'arm64 arm64e'
-      end
-    end
   end
+  file_name = Dir.glob("*.xcodeproj")[0]
+  app_project = Xcodeproj::Project.open(file_name)
+  app_project.native_targets.each do |target|
+    target.build_configurations.each do |config|
+      cflags = config.build_settings['OTHER_CFLAGS'] || '$(inherited) '
+      unless cflags.include? '-DFB_SONARKIT_ENABLED=1'
+        puts 'Adding -DFB_SONARKIT_ENABLED=1 in OTHER_CFLAGS...'
+        cflags << '-DFB_SONARKIT_ENABLED=1'
+      end
+      config.build_settings['OTHER_CFLAGS'] = cflags
+    end
+    app_project.save
+  end
+  installer.pods_project.save
 end
