--- a/package.json
+++ b/package.json
@@ -10,52 +10,53 @@
     "postinstall": "npx jetify"
   },
   "dependencies": {
-    "@material-ui/core": "^4.9.11",
+    "@material-ui/core": "^4.9.12",
     "@react-native-community/async-storage": "^1.9.0",
+    "@react-native-community/picker": "^1.3.0",
     "appcenter": "^2.6.1",
-    "appcenter-analytics": "2.4.0",
+    "appcenter-analytics": "^3.0.2",
     "appcenter-crashes": "^2.6.1",
     "buffer": "^5.6.0",
-    "i18n-js": "^3.5.0",
-    "jetifier": "^1.6.4",
-    "native-base": "^2.13.8",
+    "i18n-js": "^3.5.1",
+    "jetifier": "^1.6.5",
+    "native-base": "^2.13.12",
     "prop-types": "^15.7.2",
     "react": "16.11.0",
     "react-art": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-native": "^0.62.2",
-    "react-native-ble-plx": "^1.1.0",
+    "react-native-ble-plx": "^1.1.1",
     "react-native-elements": "^1.2.7",
-    "react-native-fab": "^1.0.14",
+    "react-native-fab": "^1.0.16",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-iphone-x-helper": "^1.2.1",
     "react-native-localize": "^1.4.0",
     "react-native-paper": "^3.8.0",
     "react-native-reanimated": "^1.8.0",
-    "react-native-screens": "^2.5.0",
-    "react-native-svg": "^9.13.3",
+    "react-native-screens": "^2.7.0",
+    "react-native-svg": "^9.13.6",
     "react-native-tab-view": "^2.14.0",
     "react-native-typography": "^1.4.1",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "^0.11.7",
-    "react-navigation": "^4.3.7",
-    "react-navigation-drawer": "^2.4.11",
-    "react-navigation-tabs": "^2.8.11",
-    "react-redux": "^7.1.1",
+    "react-navigation": "^4.3.8",
+    "react-navigation-drawer": "^2.4.12",
+    "react-navigation-tabs": "^2.8.12",
+    "react-redux": "^7.2.0",
     "realm": "3.6.0",
-    "redux": "^4.0.4",
+    "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "uuid": "^3.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
-    "@babel/runtime": "^7.6.2",
+    "@babel/runtime": "^7.9.2",
     "@react-native-community/eslint-config": "^0.0.5",
     "babel-jest": "^24.9.0",
     "eslint": "^6.5.1",
     "jest": "^24.9.0",
-    "metro-react-native-babel-preset": "^0.56.3",
+    "metro-react-native-babel-preset": "^0.56.4",
     "react-test-renderer": "16.11.0"
   },
   "jest": {
