--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         </intent-filter>
       </activity>
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
+      <activity android:name=".MainActivity" android:screenOrientation="portrait" android:windowSoftInputMode="adjustPan"/>
     </application>
 
 </manifest>
