--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "react-navigation-drawer": "^2.4.12",
     "react-navigation-tabs": "^2.8.12",
     "react-redux": "^7.2.0",
-    "realm": "3.6.0",
+    "realm": "^10.2.0",
     "recyclerlistview": "^3.0.0",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
