--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "version": "react-native-version",
     "test": "jest",
     "lint": "eslint .",
-    "postinstall": "npx jetify"
+    "postinstall": "npx jetify && patch-package"
   },
   "dependencies": {
     "@material-ui/core": "^4.9.12",
@@ -21,6 +21,7 @@
     "i18n-js": "^3.5.1",
     "jetifier": "^1.6.5",
     "native-base": "^2.13.12",
+    "patch-package": "^6.2.2",
     "prop-types": "^15.7.2",
     "react": "16.11.0",
     "react-art": "^16.13.1",
