--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -144,15 +144,25 @@ android {
             include "armeabi-v7a", "x86", "arm64-v8a", "x86_64"
         }
     }
+    
     signingConfigs {
-
+        release {
+            if (project.hasProperty('MYAPP_UPLOAD_STORE_FILE')) {
+                storeFile file(MYAPP_UPLOAD_STORE_FILE)
+                storePassword MYAPP_UPLOAD_STORE_PASSWORD
+                keyAlias MYAPP_UPLOAD_KEY_ALIAS
+                keyPassword MYAPP_UPLOAD_KEY_PASSWORD
+            }
+        }
     }
+
     buildTypes {
         debug {
 
 
         }
         release {
+            signingConfig signingConfigs.release
             // release build get signed by appcenter !!
             // signingConfig signingConfigs.release
             // minifyEnabled enableProguardInReleaseBuilds
