--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "@material-ui/core": "^4.9.12",
     "@react-native-community/async-storage": "^1.9.0",
     "@react-native-community/picker": "^1.3.0",
-    "appcenter": "^3.0.2",
-    "appcenter-analytics": "^3.0.2",
-    "appcenter-crashes": "^3.0.2",
+    "appcenter": "5.0.0",
+    "appcenter-analytics": "5.0.0",
+    "appcenter-crashes": "5.0.0",
     "buffer": "^5.6.0",
     "fast-deep-equal": "^3.1.3",
     "i18n-js": "^3.5.1",
@@ -26,7 +26,7 @@
     "react": "16.11.0",
     "react-art": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-native": "^0.62.2",
+    "react-native": "0.63",
     "react-native-ble-plx": "^1.1.1",
     "react-native-elements": "^1.2.7",
     "react-native-fab": "^1.0.16",
