--- a/eas.json
+++ b/eas.json
@@ -26,6 +26,10 @@
     }
   },
   "submit": {
-    "production": {}
+    "production": {
+      "ios": {
+        "ascAppId": "1490425883"
+      }
+    }
   }
 }
