--- a/eas.json
+++ b/eas.json
@@ -23,6 +23,14 @@
       "env": {
         "NODE_ENV": "production"
       }
+    },
+    "development-simulator": {
+      "developmentClient": true,
+      "distribution": "internal",
+      "ios": {
+        "simulator": true
+      },
+      "environment": "development"
     }
   },
   "submit": {
