--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "date-fns": "^4.1.0",
-    "expo": "~54.0.30",
+    "expo": "~54.0.31",
     "expo-constants": "~18.0.10",
     "expo-dev-client": "^6.0.20",
     "expo-file-system": "^19.0.17",
@@ -37,7 +37,8 @@
     "expo-web-browser": "~15.0.10",
     "human-id": "^4.1.2",
     "i18next": "^25.6.1",
-    "react": "^19.1.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-i18next": "^16.2.4",
     "react-native": "0.81.5",
     "react-native-ble-plx": "^3.5.0",
@@ -51,7 +52,7 @@
     "uuid": "^13.0.0"
   },
   "devDependencies": {
-    "@types/react": "~19.1.0",
+    "@types/react": "~19.1.10",
     "@types/uuid": "^10.0.0",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
